NetBSD Problem Report #40055

From www@NetBSD.org  Fri Nov 28 14:43:37 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 400A963BD2D
	for <gnats-bugs@gnats.netbsd.org>; Fri, 28 Nov 2008 14:43:37 +0000 (UTC)
Message-Id: <20081128144337.14FED63B8BD@narn.NetBSD.org>
Date: Fri, 28 Nov 2008 14:43:37 +0000 (UTC)
From: pooka@iki.fi
Reply-To: pooka@iki.fi
To: gnats-bugs@NetBSD.org
Subject: efs does not handle specfs properly
X-Send-Pr-Version: www-1.0

>Number:         40055
>Category:       kern
>Synopsis:       efs does not handle specfs properly
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Nov 28 14:45:00 +0000 2008
>Closed-Date:    Mon Dec 01 14:35:17 +0000 2008
>Last-Modified:  Tue Jan 06 23:35:03 +0000 2009
>Originator:     Antti Kantee
>Release:        
>Organization:
>Environment:
>Description:
Or maybe the kernel can't handle efs?  Anyway...

wapbl code assumes that for all vnodes of type VBLK v_specmountpoint is valid.  efs does not do spec_node_init() or set the specops vector for VBLK vnodes.  As a result, you get a kernel panic in vn_lock() -> wapbl_vphaswapbl() -> wapbl_vptomp().

Might not happen on a kernel without DIAGNOSTIC (didn't check).
>How-To-Repeat:
Use efs with block device nodes on it.
>Fix:

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: pooka@NetBSD.org
State-Changed-When: Mon, 01 Dec 2008 16:35:17 +0200
State-Changed-Why:
support added


From: Antti Kantee <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40055 CVS commit: src/sys/fs/efs
Date: Mon,  1 Dec 2008 14:34:51 +0000 (UTC)

 Module Name:	src
 Committed By:	pooka
 Date:		Mon Dec  1 14:34:51 UTC 2008

 Modified Files:
 	src/sys/fs/efs: efs_vfsops.c efs_vnops.c

 Log Message:
 Add specfs/fifofs support.  Not really fully tested, but at least
 vfs routines don't crash now.
 (didn't have an image with matching device node numbers)

 fixes PR kern/40055 by myself


 To generate a diff of this commit:
 cvs rdiff -r1.16 -r1.17 src/sys/fs/efs/efs_vfsops.c \
     src/sys/fs/efs/efs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40055 CVS commit: [netbsd-5] src/sys/fs/efs
Date: Tue,  6 Jan 2009 23:34:46 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Tue Jan  6 23:34:46 UTC 2009

 Modified Files:
 	src/sys/fs/efs [netbsd-5]: efs_vfsops.c efs_vnops.c

 Log Message:
 Pull up following revision(s) (requested by rumble in ticket #216):
 	sys/fs/efs/efs_vfsops.c: revision 1.17
 	sys/fs/efs/efs_vnops.c: revision 1.17
 Add specfs/fifofs support.  Not really fully tested, but at least
 vfs routines don't crash now.
 (didn't have an image with matching device node numbers)
 fixes PR kern/40055 by myself


 To generate a diff of this commit:
 cvs rdiff -r1.16 -r1.16.4.1 src/sys/fs/efs/efs_vfsops.c
 cvs rdiff -r1.14.20.2 -r1.14.20.3 src/sys/fs/efs/efs_vnops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.