Add specfs/fifofs support.  Not really fully tested, but at least vfs routines don't crash now. (didn't have an image with matching device node numbers)

fixes PR kern/40055 by myself